Fix scrollbar issues on win32

--- a/src/app/components/config/config.component.scss
+++ b/src/app/components/config/config.component.scss
@@ -1,6 +1,7 @@
 .top-content {
     padding: 0 .5rem;
     overflow-y: auto;
+    overflow-x: hidden;
     height: calc(100vh - 6rem);
 
     ::ng-deep {
